[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-git-assist"
version = "0.1.0"
description = "AI-powered Git commit helper: security scan, conventional commits, optional README + tests"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "You"}]
dependencies = [
  "openai>=1.0.0",
  "requests>=2.31.0",
]

[project.scripts]
ai-git-assist = "ai_git_assist.cli:main"

[tool.setuptools]
packages = ["ai_git_assist"]
